--- a/JSP_connected_with_gitHub/src/main/webapp/WEB-INF/web.xml
+++ b/JSP_connected_with_gitHub/src/main/webapp/WEB-INF/web.xml
@@ -30,4 +30,17 @@
   	<filter-name>Filter02</filter-name>
   	<url-pattern>/JSP_exam/filter02_process.jsp</url-pattern>
   </filter-mapping>
+  
+  <filter>
+  	<filter-name>Filter02_2</filter-name>
+  	<filter-class>examples.exam12_3F</filter-class>
+  	<init-param>
+  		<param-name>filename</param-name>
+  		<param-value>c:\\logs\\monitor.log</param-value>
+  	</init-param>
+  </filter>
+  <filter-mapping>
+  	<filter-name>Filter02_2</filter-name>
+  	<url-pattern>/JSP_exam/filter02_process.jsp</url-pattern>
+  </filter-mapping>
 </web-app>
